[INCOME-3094] fix sonnar issues